# parser_cat_bread

./: .gitignore  README.md  pyproject.toml
beard_scraper/: beard.html  breed.json  scrapy.cfg
beard_scraper/breed_scraper/: items.py  middlewares.py  pipelines.py  settings.py
beard_scraper/breed_scraper/spiders/: beard_spider.py
