[tool.poetry]
name = "parser"
version = "0.1.0"
description = ""
authors = ["Isa Suleymanov <issashkalikimike@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Scrapy = "^2.6.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
